It works [Exclamation mark]

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,11 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-config.folder=${file.reference.CanvasTurtle-config}
+config.folder=${file.reference.kilppari-config}
 file.reference.CanvasTurtle-config=config
 file.reference.CanvasTurtle-public_html=public_html
 file.reference.CanvasTurtle-test=test
+file.reference.kilppari-config=config
+file.reference.kilppari-public_html=public_html
+file.reference.kilppari-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.CanvasTurtle-public_html}
-test.folder=${file.reference.CanvasTurtle-test}
+test.folder=${file.reference.kilppari-test}
