--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "express": "~3.5.1",
-    "logfmt": "~1.1.2"
+    "logfmt": "~1.1.2",
+    "mongodb": "~1.3.23",
+    "mongoose": "~3.8.8"
   }
 }
